GNOME Bugzilla – Bug 735446
Evince headerbar buttons have gone missing
Last modified: 2014-08-28 14:00:47 UTC
After updating to evince 3.13.90, all the buttons in the headerbar have gone missing. There's no gear (hamburger) menu, no find button, no zoom options. Looks like this only happens when opening a file directly ('evince myfile.pdf' or through nautilus); when I go through the Recent Documents page all the buttons appear as expected. https://kalev.fedorapeople.org/evince-no-buttons.png
also if you hit F-11 and go to full screen mode the buttons appear
Created attachment 284509 [details] [review] shell: Ensure toolbar widgets are shown when constructing the toolbar In some cases we were not calling gtk_widget_show on some of the widgets in the toolbar.
Review of attachment 284509 [details] [review]: ::: shell/ev-toolbar.c @@ +278,3 @@ + /* Ensure toolbar widgets are shown */ + ev_toolbar_set_mode (ev_toolbar, ev_toolbar->priv->toolbar_mode); I don't think this is the best approach. I think it should be the window, the one calling ev_toolbar_set_mode(). The actual problem is the early return added to ev_window_destroy_recent_view(). I think we should call ev_toolbar_set_mode() in ev_window_set_document() but also move ev_window_title_set_type() and ev_window_update_actions_sensitivity() from ev_window_destroy_recent_view() to ev_window_set_document().
Review of attachment 284509 [details] [review]: ::: shell/ev-toolbar.c @@ +278,3 @@ + /* Ensure toolbar widgets are shown */ + ev_toolbar_set_mode (ev_toolbar, ev_toolbar->priv->toolbar_mode); I Agree
Created attachment 284552 [details] [review] shell: set toolbar to Normal Mode in set_document setting the toolbar to normal mode will correctly show widgets inside the toolbar
*** Bug 735527 has been marked as a duplicate of this bug. ***
Comment on attachment 284552 [details] [review] shell: set toolbar to Normal Mode in set_document Thanks
Review of attachment 284552 [details] [review]: ok
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.