shell: set toolbar to Normal Mode in set_document

setting the toolbar to normal mode will correctly
show widgets inside the toolbar

https://bugzilla.gnome.org/show_bug.cgi?id=735446